--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -32,30 +32,43 @@
 	color: #999;
 }
 
-#explanation {
-	#text-align: center;
+#explanation,#deathExplanation {
 	font-size: 20px;	
 	font-weight: bold;
 	line-height: 35px;
 	width: 600px;
 }
 
-#submit{
-	position: relative;
-	top: 8px;
-	width: 75px;
-	opacity: 0.5;
+#enter {
+	margin-top: 30px;
 }
-#submit.active {
-	opacity: 1; 
-}
-#submit.active:hover {
-	border-bottom: 1px solid black;
-	top: 9px;
+textarea { 
+	color: #444;
+	margin: 0 auto;
+	height: 100px;
+	width: 400px;
+	font-size: 14px;
 }
 
-#submit.active:active {
-	left: 7px;
+#formDays { display: none; }
+
+button {
+	display: block;
+	margin: 0 auto;
+	font-size: 12px;
+	color: #444;
+	margin-top: 5px;
+	width: 150px;
+	height: 30px;
+	background-color: #fff;
+	border: 1px #888 solid;
+	}
+button:hover { cursor: hand; cursor: pointer; }
+button:active { background-color: #f0f0f0; }
+
+#reaction {
+	height: 150px;
+	margin-top: 150px;
 }
 
 input[type="text"] {
@@ -64,6 +77,21 @@ input[type="text"] {
 	width: 155px;
 	font-size: 60px;
 	margin-right: 10px;
+}
+input[name="year"] {
+	margin-right: 0px;
+}
+
+#posts {	
+	margin: 0 auto;
+	width: 500px;
+	font-size: 18px;
+	color: #444;
+}
+
+.post {
+	padding: 20px 0;
+	border-bottom: 1px solid #ddd;
 }
 
 
