--- a/clock.html.erb
+++ b/clock.html.erb
@@ -12,36 +12,36 @@
 			<div id="top" class="centerDiv outer">
 				<div id="clock" class="centerDiv inner">
 					<span id="days">
-						<div class="value"></div>
+						<div class="value">0</div>
 						<div class="units">days</div>
 					</span>
 					<span id="hours">
-						<div class="value"></div>
+						<div class="value">0</div>
 						<div class="units">hours</div>
 					</span>
 					<span id="minutes">
-						<div class="value"></div>
+						<div class="value">0</div>
 						<div class="units">minutes</div>
 					</span>
 					<span id="seconds">
-						<div class="value"></div>
+						<div class="value">0</div>
 						<div class="units">seconds</div>
 					</span>
 				</div>
 			</div>
 			<div id="bottom" class="centerDiv outer">
 				<div id="deathExplanation" class="hide centerDiv inner">
-					This is your life clock. It displays the number of days left until you turn 78, the life expectancy of the average American. The birthday you entered currently exceeds that age, which means you are playing with fire. Take advantage of every single day because you will never be able to get it back.
+					This is your life clock. It displays the number of days left until you turn 78, the life expectancy of the average American. The birthday you entered currently exceeds that age, which means you are playing with fire, my friend. Take advantage of every single day because you will never be able to get it back.
 				</div>
 				<div id="explanation" class="show centerDiv inner">
-					This is your life clock. It displays the number of days left until you turn 78, the life expectancy of the average American. Every second of every day for the rest of your life, this clock will be counting down. This means that when this clock hits zero you will probably be dead. But fear not! You still have <span class="explanationDays"></span> days left to enjoy everything this amazing world has to offer. Take advantage of every single day because you will never be able to get it back.
+					This is your life clock. It displays the number of days left until you turn 78, the life expectancy of the average American. Let this serve as a reminder that you only get one chance at life. You've only got about <span class="explanationDays">0</span> days left to do something great and to experience everything this world has to offer.  
 				</div>
 			</div>
 			<div class="centerDiv outer">
 				<div id="reaction" class="centerDiv inner">
 					<form method="POST" action="/create">
 						<textarea id="reactionText" name="reaction" placeholder="How will you spend your remaining time?"></textarea>
-						<input type="text" id="formDays" name="days"></input>
+						<input type="text" id="formDays" name="days" value="0" />
 						<button type="submit" id="submit" onclick="return validateReaction(event)">Submit</button>
 						<a href="/posts" id="postsLink">view all posts</a>
 					</form>
