--- a/index.html.erb
+++ b/index.html.erb
@@ -15,7 +15,7 @@
 				</div>
 			</div>
 			<div id="bottom" class="centerDiv outer">
-				<form method="POST" action="/clock">
+				<form method="POST" action="/setBirthdayPath">
 				<div id="inputBoxes" class="show centerDiv inner">
 					<input type="text" name="month" maxlength="2" placeholder="mm" onkeyup="return validateBirth(event)" />
 					<input type="text" name="day" maxlength="2" placeholder="dd" onkeyup="return validateBirth(event)" />
