--- a/posts.html.erb
+++ b/posts.html.erb
@@ -11,7 +11,7 @@
 		<div id="main">
 			<% posts.each do |post| %>
 				<div class="post">
-					<div class="pretext"><%= post['days'] %> days writes:</div>
+					<div class="pretext"><%= post['days'] %> days remaining says:</div>
 					<%= post['text'] %>
 				</div>
 			<% end %>
